Added open api docs and new recentSboms endpoint
- open api docs added for endpoint testing
- recentSboms endpoint added to display on frontend UI
